.history/kubernetes/ingress_20250328172055.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-ingress
  namespace: onlineeventbooking-i221242-anooshaali
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: eventbooking.local
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 80
